--- a/CorreiosRestful.API/CorreiosRestful.API.csproj
+++ b/CorreiosRestful.API/CorreiosRestful.API.csproj
@@ -109,6 +109,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="WebApiCache">
+      <HintPath>..\packages\WebApiCache.1.0.1\lib\WebApiCache.dll</HintPath>
+    </Reference>
     <Reference Include="WebApiContrib.Formatting.Jsonp">
       <HintPath>..\packages\WebApiContrib.Formatting.Jsonp.0.9.3\lib\net40\WebApiContrib.Formatting.Jsonp.dll</HintPath>
     </Reference>
