--- a/CorreiosRestful.API/packages.config
+++ b/CorreiosRestful.API/packages.config
@@ -21,6 +21,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net45" />
+  <package id="WebApiCache" version="1.0.1" targetFramework="net45" />
   <package id="WebApiContrib.Formatting.Jsonp" version="0.9.3" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
