--- a/CorreiosRestful.API/Web.config
+++ b/CorreiosRestful.API/Web.config
@@ -16,6 +16,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key="UriCorreios" value="http://m.correios.com.br/movel/buscaCepConfirma.do"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
