--- a/AddressApi.Correios.Tests/AddressApi.Correios.Tests.csproj
+++ b/AddressApi.Correios.Tests/AddressApi.Correios.Tests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FBC472F0-56F5-486D-A688-F8DD6F818367}</ProjectGuid>
+    <ProjectGuid>{8E922561-97D0-44DB-B545-687B2765A67F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AddressApi.Base.Tests</RootNamespace>
-    <AssemblyName>AddressApi.Base.Tests</AssemblyName>
+    <RootNamespace>AddressApi.Correios.Tests</RootNamespace>
+    <AssemblyName>AddressApi.Correios.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -50,13 +50,17 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CorreiosRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AddressTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AddressApi.Base\AddressApi.Base.csproj">
       <Project>{ec149a10-26be-43a8-9445-5f9a2e7ef997}</Project>
       <Name>AddressApi.Base</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AddressApi.Correios\AddressApi.Correios.csproj">
+      <Project>{b63afebd-2b50-4c2c-a00e-b6f5bc30db5f}</Project>
+      <Name>AddressApi.Correios</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
