--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ ipch/
 # ReSharper is a .NET coding add-in
 _ReSharper*/
 *.[Rr]e[Ss]harper
-_[Rr]e[Ss]harper*
+_[Rr]e[Ss]harper*/
 
 # TeamCity is a build add-in
 _TeamCity*
