Crawler Correios done

--- a/AddressApi.Correios.Tests/AddressApi.Correios.Tests.csproj
+++ b/AddressApi.Correios.Tests/AddressApi.Correios.Tests.csproj
@@ -63,6 +63,9 @@
       <Name>AddressApi.Correios</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
