--- a/AddressApi.RestApi/AddressApi.RestApi.csproj
+++ b/AddressApi.RestApi/AddressApi.RestApi.csproj
@@ -282,7 +282,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
