--- a/AddressApi.RestApi/packages.config
+++ b/AddressApi.RestApi/packages.config
@@ -28,5 +28,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
+  <package id="WebApiContrib.Formatting.Jsonp" version="0.9.5.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
