altera appSetting 'UriCorreios', possibilitando que a url completa seja configurada no web.config sem que seja necessário recompilar a aplicação caso a url dos correios mude

--- a/AddressApi.RestApi/Web.config
+++ b/AddressApi.RestApi/Web.config
@@ -17,7 +17,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="UriCorreios" value="http://m.correios.com.br/movel/buscaCepConfirma.do" />
+    <add key="UriCorreios" value="http://m.correios.com.br/movel/buscaCepConfirma.do?cepEntrada={0}%26tipoCep=%26cepTemp%26metodo=buscarCep" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
