--- a/AddressApi.Correios.Tests/App.config
+++ b/AddressApi.Correios.Tests/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="UriCorreios" value="http://m.correios.com.br/movel/buscaCepConfirma.do"/>
+    <add key="UriCorreios" value="http://m.correios.com.br/movel/buscaCepConfirma.do?cepEntrada={0}%26tipoCep=%26cepTemp%26metodo=buscarCep" />
   </appSettings>
 </configuration>
